<resources>
    <string name="app_name">HT730Scanner</string>
    <string name="select_a_command">Select a command:</string>
    <string name="select_a_parameter_group">Select a parameter group:</string>
    <string name="select_a_parameter">Select a parameter:</string>
    <string name="select_a_value">Select a value:</string>
    <string name="execute">Execute</string>
    <string name="clear">Clear</string>
    <string name="received_with_intent">Received with Intent:</string>
    <string name="received_with_scan2key">Received with Scan2Key:</string>
    <string name="settings_file_location">USISETTINGS.CFG location:</string>
    <string name="default_settings_file_location">/sdcard/</string>
    <string name="preamble">Preamble:</string>
    <string name="postamble">Postamble:</string>
    <string name="terminator">Terminator:</string>
    <string name="default_terminator">&lt;LF&gt;</string>
    <string-array name="UPC_EAN">
        <item>{
			"Parameter":"UPC-A",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x01
		}</item>
        <item>{
			"Parameter":"UPC-E",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x02
		}</item>
        <item>{
			"Parameter":"UPC-E1",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x0C
		}</item>
        <item>{
			"Parameter":"EAN-8",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x04
		}</item>
        <item>{
			"Parameter":"EAN-13",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x03
		}</item>
        <item>{
			"Parameter":"'Bookland EAN'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x53
		}</item>
        <item>{
			"Parameter":"'Bookland ISBN Format'",
			"Type":2,
			"Min":0,
			"Max":1,
			"Hex":0xF140,
			"Tag":{
				"'0'":"'Bookland ISBN-10'",
				"'1'":"'Bookland ISBN-13'"
			}
		}</item>
        <item>{
			"Parameter":"'Decode UPC/EAN Supplementals'",
			"Type":2,
			"Min":0,
			"Max":8,
			"Hex":0x10,
			"Tag":{
				"'0'":"'Ignore UPC/EAN With Supplementals'",
				"'1'":"'Decode UPC/EAN With Supplementals'",
				"'2'":"'Autodiscriminate UPC/EAN Supplementals'",
				"'3'":"'Enable Smart Supplemental Mode'",
				"'4'":"'Enable 378/379 Supplemental Mode'",
				"'5'":"'Enable 978/979 Supplemental Mode'",
				"'6'":"'Enable 414/419/434/439 Supplemental Mode'",
				"'7'":"'Enable 977 Supplemental Mode'",
				"'8'":"'Enable 491 Supplemental Mode'"
			}
		}</item>
        <item>{
			"Parameter":"'UPC/EAN/JAN Supplemental Redundancy'",
			"Type":3,
			"Min":2,
			"Max":20,
			"Hex":0x50
		}</item>
        <item>{
			"Parameter":"'UPC/EAN/JAN Supplemental AIM ID Format'",
			"Type":2,
			"Min":0,
			"Max":1,
			"Hex":0xF1A0,
			"Tag":{
				"'0'":"'Separate'",
				"'1'":"'Combined'"
			}
		}</item>
        <item>{
			"Parameter":"'Transmit UPC-A Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x28
		}</item>
        <item>{
			"Parameter":"'Transmit UPC-E Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x29
		}</item>
        <item>{
			"Parameter":"'Transmit UPC-E1 Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x2A
		}</item>
        <item>{
			"Parameter":"'UPC-A Preamble'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0x22,
			"Tag":{
				"'0'":"'No Preamble'",
				"'1'":"'System Character'",
				"'2'":"'System Character and Country Code'"
			}
		}</item>
        <item>{
			"Parameter":"'UPC-E Preamble'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0x23,
			"Tag":{
				"'0'":"'No Preamble'",
				"'1'":"'System Character'",
				"'2'":"'System Character and Country Code'"
			}
		}</item>
        <item>{
			"Parameter":"'UPC-E1 Preamble'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0x24,
			"Tag":{
				"'0'":"'No Preamble'",
				"'1'":"'System Character'",
				"'2'":"'System Character and Country Code'"
			}
		}</item>
        <item>{
			"Parameter":"'Convert UPC-E to A'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x25
		}</item>
        <item>{
			"Parameter":"'Convert UPC-E1 to A'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x26
		}</item>
        <item>{
			"Parameter":"'EAN-8 Zero Extend'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x27
		}</item>
        <item>{
			"Parameter":"'UPC/EAN Security Level'",
			"Type":2,
			"Min":0,
			"Max":3,
			"Hex":0x4D,
			"Tag":{
				"'0'":"'UPC/EAN Security Level 0'",
				"'1'":"'UPC/EAN Security Level 1'",
				"'2'":"'UPC/EAN Security Level 2'",
				"'3'":"'UPC/EAN Security Level 3'"
			}
		}</item>
        <item>{
			"Parameter":"'UCC Coupon Extended Code'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x55
		}</item>
        <item>{
			"Parameter":"'Coupon Report'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0xF1DA,
			"Tag":{
				"'0'":"'Old Coupon Symbols'",
				"'1'":"'New Coupon Symbols'",
				"'2'":"'Both Coupon Format'"
			}
		}</item>
        <item>{
			"Parameter":"'ISSN EAN'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF169
		}</item>
    </string-array>
    <string-array name="Code_128">
        <item>{
			"Parameter":"'Code 128'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x08
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":0,
			"Max":55,
			"Hex":0xD1
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":0,
			"Max":55,
			"Hex":0xD2
		}</item>
        <item>{
			"Parameter":"'GS1-128'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x0E
		}</item>
        <item>{
			"Parameter":"'ISBT 128'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x54
		}</item>
        <item>{
			"Parameter":"'ISBT Concatenation'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0xF141,
			"Tag":{
				"'0'":"'Disable ISBT Concatenation'",
				"'1'":"'Enable ISBT Concatenation'",
				"'2'":"'Autodiscriminate ISBT Concatenation'"
			}
		}</item>
        <item>{
			"Parameter":"'Check ISBT Table'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF142
		}</item>
        <item>{
			"Parameter":"'ISBT Concatenation Redundancy'",
			"Type":3,
			"Min":2,
			"Max":20,
			"Hex":0xDF
		}</item>
        <item>{
			"Parameter":"'EAN-128 Field Separator'",
			"Type":2,
			"Min":0,
			"Max":0,
			"Hex":0x0,
			"Tag":{
				"'0'":"'Click To Set'"
			}
		}</item>
    </string-array>
    <string-array name="Code_39">
        <item>{
			"Parameter":"'Code 39'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x00
		}</item>
        <item>{
			"Parameter":"'Trioptic Code 39'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x0D
		}</item>
        <item>{
			"Parameter":"'Convert Code 39 to Code 32'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x56
		}</item>
        <item>{
			"Parameter":"'Code 32 Prefix'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xE7
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":0,
			"Max":48,
			"Hex":0x12
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":0,
			"Max":48,
			"Hex":0x13
		}</item>
        <item>{
			"Parameter":"'Check Digit Verification'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x30
		}</item>
        <item>{
			"Parameter":"'Transmit Code 39 Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x2B
		}</item>
        <item>{
			"Parameter":"'Code 39 Full ASCII'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x11
		}</item>
    </string-array>
    <string-array name="Code_93">
        <item>{
			"Parameter":"'Code 93'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x09
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0x1A
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0x1B
		}</item>
    </string-array>
    <string-array name="Code_11">
        <item>{
			"Parameter":"'Code 11'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x0A
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0x1C
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0x1D
		}</item>
        <item>{
			"Parameter":"'Check Digit Verification'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0x34,
			"Tag":{
				"'0'":"'Disable'",
				"'1'":"'One Check Digit'",
				"'2'":"'Two Check Digit'"
			}
		}</item>
        <item>{
			"Parameter":"'Transmit Code 11 Check Digits'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x2F
		}</item>
    </string-array>
    <string-array name="I2of5">
        <item>{
			"Parameter":"'Interleaved 2 of 5'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x06
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":2,
			"Max":55,
			"Hex":0x16
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":2,
			"Max":55,
			"Hex":0x17
		}</item>
        <item>{
			"Parameter":"'Check Digit Verification'",
			"Type":2,
			"Min":0,
			"Max":2,
			"Hex":0x31,
			"Tag":{
				"'0'":"'Disable'",
				"'1'":"'USS Check Digit'",
				"'2'":"'OPCC Check Digit'"
			}
		}</item>
        <item>{
			"Parameter":"'Transmit I 2 of 5 Check Digits'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x2C
		}</item>
        <item>{
			"Parameter":"'Convert I 2 of 5 to EAN-13'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x52
		}</item>
    </string-array>
    <string-array name="D2of5">
        <item>{
			"Parameter":"'Discrete 2 of 5'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x05
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0x14
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0x15
		}</item>
    </string-array>
    <string-array name="C2of5">
        <item>{
			"Parameter":"'Chinese 2 of 5'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF098
		}</item>
    </string-array>
    <string-array name="M2of5">
        <item>{
			"Parameter":"'Matrix 2 of 5'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF16A
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0xF16B
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":1,
			"Max":48,
			"Hex":0xF16C
		}</item>
        <item>{
			"Parameter":"'Matrix 2 of 5 Redundancy'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF16D
		}</item>
        <item>{
			"Parameter":"'Matrix 2 of 5 Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF16E
		}</item>
        <item>{
			"Parameter":"'Transmit Matrix 2 of 5 Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0xF16F
		}</item>
    </string-array>
    <string-array name="Codabar">
        <item>{
			"Parameter":"'Codabar'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x07
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":3,
			"Max":48,
			"Hex":0x18
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":3,
			"Max":48,
			"Hex":0x19
		}</item>
        <item>{
			"Parameter":"'CLSI Editing'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x36
		}</item>
        <item>{
			"Parameter":"'NOTIS Editing'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x37
		}</item>
    </string-array>
    <string-array name="MSI">
        <item>{
			"Parameter":"'MSI'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x0B
		}</item>
        <item>{
			"Parameter":"'Length L1'",
			"Type":3,
			"Min":1,
			"Max":16,
			"Hex":0x1E
		}</item>
        <item>{
			"Parameter":"'Length L2'",
			"Type":3,
			"Min":1,
			"Max":16,
			"Hex":0x1F
		}</item>
        <item>{
			"Parameter":"'MSI Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x32
		}</item>
        <item>{
			"Parameter":"'Transmit MSI Check Digit'",
			"Type":1,
			"Min":0,
			"Max":1,
			"Hex":0x2E
		}</item>
        <item>{
			"Parameter":"'MSI Check Digit Algorithm'",
			"Type":2,
			"Min":0,
			"Max":1,
			"Hex":0x33,
			"Tag":{
				"'0'":"'MOD 10/MOD 11'",
				"'1'":"'MOD 10/MOD 10'"
			}
		}</item>
    </string-array>
</resources>